@@ -1,6 +1,6 @@
 #############################################################################
 # vp    -    SDL based image viewer for linux and fbsd. (X and console)	    #
-# Copyright (C) 2001-2007 Erik Greenwald <erik@smluc.org>		    #
+# Copyright (C) 2001-2008 Erik Greenwald <erik@smluc.org>		    #
 # 									    #
 # This program is free software; you can redistribute it and/or modify      #
 # it under the terms of the GNU General Public License as published by	    #
@@ -17,7 +17,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA #
 #############################################################################
 
-# $Id: Makefile.am,v 1.6 2007/01/10 15:55:27 erik Exp $
+# $Id: Makefile.am,v 1.7 2008/06/16 11:43:56 erik Exp $
 
 man_MANS = vp.1
 EXTRA_DIST = vp.1
